# titanium

./: .gitignore  CMakeLists.txt  Makefile  README.md  baseline_benchmark.cpp  baseline_engine.cpp  baseline_engine.h  benchmark_results.txt  benchmark_results_utf8.txt  build_issue3.bat  build_issue4.bat  code.cpp  code.h  high_freq_prog  issue3_test.cpp  order.h  order_generator.cpp  order_generator.h  smartqueue.h  titanium_engine_comparison.md
benchmarks/: baseline_benchmark.cpp  dummy_bench.cpp  titanium_benchmark.cpp
include/titanium/: order.hpp
include/titanium/concurrency/: spsc_queue.hpp
include/titanium/engine/: baseline_engine.hpp  price_level.hpp  risk_kernel.cuh  titanium_engine.hpp
include/titanium/engine/cpu/: risk_kernel.hpp
include/titanium/engine/cuda/: risk_kernel.cuh
include/titanium/utils/: order_generator.hpp  thread_utility.hpp
src/engine/: baseline_engine.cpp  risk_kernel.cu  titanium_engine.cpp
src/engine/cuda/: risk_kernel.cu
src/utils/: order_generator.cpp
tests/: a.out  stress_test_spsc.cpp  test.cpp  test_cuda.cpp
